[package]
name = "log-wrangler"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/timothyb89/log-wrangler"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
jiff = "0.2.21"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
crossterm = { version = "0.29", features = ["event-stream", "use-dev-tty"] }
regex = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.26", features = ["connect", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
url = { version = "2", features = ["serde"] }
memchr = "2.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
